Fix NPE when using Copy to clipboard